<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".LoginActivity" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical">
	    <ImageView
	        android:layout_width="@dimen/main_logo_w"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/log_text" />
	
	    <EditText
	        android:id="@+id/edtUsername"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_padding"
	        android:background="@drawable/img_user_name"
	        android:hint="@string/hint_username" 
	        android:text="yuanfen7650"/>
	
	    <EditText
	        android:id="@+id/edtPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_padding"
	        android:inputType="textPassword"
	        android:background="@drawable/img_password"
	        android:hint="@string/hint_password" 
	        android:text="huoling7650"/>
	
	    <Button
	        android:id="@+id/btnLogin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_padding"
	        android:background="@drawable/btn_login_submit"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/btn_login" />
	
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_padding"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/btnForgotPsd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_forgot_psw" />
	
	        <TextView
	            android:id="@+id/btnRegister"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:text="@string/btn_register" />
	    </RelativeLayout>
		
	    
	</LinearLayout>
    
	<TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/text_login_other"
	        android:background="@drawable/bg_text_cap"
	        android:textColor="@color/main_frist_line"
	    	android:layout_weight="0"
	        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:paddingTop="10dip"
	    android:paddingBottom="10dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btnQQLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/logo_min_size"
                android:layout_height="@dimen/logo_min_size"
                android:src="@drawable/login_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_qq" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnWbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/logo_min_size"
                android:layout_height="@dimen/logo_min_size"
                android:src="@drawable/login_wx" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_wb" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnWxLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/logo_min_size"
                android:layout_height="@dimen/logo_min_size"
                android:src="@drawable/login_wb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_wx" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>