<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/bg_app">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
        
    <RelativeLayout 
        android:id="@+id/unLoginLayout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/mine_bg">
        <ImageView 
		    android:id="@+id/icon"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="10dip"
	    	android:src="@drawable/mine_head"/>
		<TextView 
		    android:id="@+id/btn_login"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@+id/icon"
	    	android:layout_marginTop="20dip"
	    	android:layout_marginLeft="50dip"
	    	android:paddingTop="5dip"
	    	android:paddingBottom="5dip"
	    	android:paddingLeft="10dip"
	    	android:paddingRight="10dip"
	    	android:background="@drawable/set_btn_login"
	    	android:textColor="@color/theme_color"
	    	android:text="@string/set_login"/>
		
		<TextView 
		    android:id="@+id/btn_register"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@+id/icon"
	    	android:layout_marginTop="20dip"
	    	android:layout_marginRight="50dip"
	    	android:layout_alignParentRight="true"
	    	android:paddingTop="5dip"
	    	android:paddingBottom="5dip"
	    	android:paddingLeft="10dip"
	    	android:paddingRight="10dip"
	    	android:background="@drawable/set_btn_login"
	    	android:textColor="@color/theme_color"
	    	android:text="@string/set_register"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/persionInfoLayout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="10dip"
    	android:visibility="gone"
    	android:background="@color/white">
		<RelativeLayout 
		    android:id="@+id/userInfoLayout"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content">
		    <ImageView 
	            android:id="@+id/photo"
	            android:layout_width="@dimen/photo_set_size"
	    		android:layout_height="@dimen/photo_set_size"
	    		android:src="@mipmap/test_photo"/>
	        <LinearLayout 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_toRightOf="@+id/photo"
		    	android:layout_centerVertical="true"
		    	android:gravity="center_vertical"
		    	android:layout_marginLeft="5dip"
		    	android:orientation="vertical">
	            <TextView 
	                android:id="@+id/user_name"
			        android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
	                android:text="张三"/>
	            <TextView 
	                android:id="@+id/user_role"
	                android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:layout_marginTop="10dip"
	                android:text="领航员"/>
	        </LinearLayout>
	        <TextView 
	            android:id="@+id/btn_edit"
	            android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:paddingLeft="10dip"
	            android:paddingRight="10dip"
	            android:paddingTop="5dip"
	            android:paddingBottom="5dip"
	            android:textColor="@color/gray_text"
	            android:background="@drawable/shap_round_bg"
	            android:text="@string/set_edit"
	            />
		</RelativeLayout>
        
        
        <TextView 
            android:id="@+id/people_signature"
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/userInfoLayout"
		    android:layout_marginTop="10dip"
		    android:textColor="@color/gray_text"
            android:text="主银参加电视节目录制，还没编写个性签名......"/>
        
        <View android:id="@+id/line" android:layout_marginTop="10dip" android:layout_marginBottom="10dip" style="@style/LineVertical" android:layout_below="@+id/people_signature"/>
        <LinearLayout 
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/line"
		    android:padding="5dip"
		    android:orientation="horizontal">
            <LinearLayout 
                android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:layout_weight="1"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/text_state"
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:text="0"/>
                <TextView 
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:textColor="@color/gray_text"
		    		android:text="@string/set_people_state"/>
            </LinearLayout>
            <View style="@style/LineHorizontal" android:layout_weight="0"/>
            <LinearLayout 
                android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:layout_weight="1"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/text_fcous"
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:text="0"/>
                <TextView 
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:textColor="@color/gray_text"
		    		android:text="@string/set_people_fcous"/>
            </LinearLayout>
            <View style="@style/LineHorizontal" android:layout_weight="0"/>
            <LinearLayout 
                android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:layout_weight="1"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/text_friend"
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:text="0"/>
                <TextView 
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:textColor="@color/gray_text"
		    		android:text="@string/set_people_friends"/>
            </LinearLayout>
            <View style="@style/LineHorizontal" android:layout_weight="0"/>
            <LinearLayout 
                android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:layout_weight="1"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/text_fllows"
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:text="0"/>
                <TextView 
                    android:id="@+id/text_fllow_lable"
                    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:textColor="@color/gray_text"
		    		android:text="@string/set_people_fllows"/>
            </LinearLayout>
            
            
        </LinearLayout>
    </RelativeLayout>
    
    
    
    
    <LinearLayout
        android:id="@+id/set_item_1"
         style="@style/set_item_layout" android:layout_marginTop="10dip">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_id_card"/>
        <TextView 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/set_lable1"/>
        <TextView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:layout_marginRight="10dip"
		    android:textSize="@dimen/tab_txt_size"
		    android:textColor="@color/gray_text"
		    android:text="@string/set_lable1_info"/>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
    <View style="@style/LineVertical" android:layout_marginLeft="10dip"/>
    <LinearLayout 
        android:id="@+id/set_item_2"
        style="@style/set_item_layout">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_about"/>
        <TextView 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/set_lable2"/>
        <TextView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:layout_marginRight="10dip"
		    android:textSize="@dimen/tab_txt_size"
		    android:textColor="@color/gray_text"
		    android:text="@string/set_lable2_info"/>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
	
    
    <LinearLayout
        android:id="@+id/set_item_3"
         style="@style/set_item_layout" android:layout_marginTop="10dip">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_wallet"/>
        <TextView 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/set_lable3"/>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
    <View style="@style/LineVertical" android:layout_marginLeft="10dip"/>
    <LinearLayout
        android:id="@+id/set_item_4"
         style="@style/set_item_layout">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_friend"/>
        <TextView 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/set_lable4"/>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
    <View style="@style/LineVertical" android:layout_marginLeft="10dip"/>
    <LinearLayout
        android:id="@+id/set_item_5"
         style="@style/set_item_layout">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_invite"/>
		<LinearLayout 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="horizontal">
		    <TextView 
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/set_lable5"/>
	        <TextView 
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/set_txt_min_size"
		    	android:textColor="@color/gray_text"
		    	android:layout_marginLeft="10dip"
			    android:text="@string/set_lable5_info"/>
		</LinearLayout>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
    
    
    
    
    
    <LinearLayout
        android:id="@+id/set_item_6"
         style="@style/set_item_layout" android:layout_marginTop="10dip">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_system"/>
        <TextView 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/set_lable6"/>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
    <View style="@style/LineVertical" android:layout_marginLeft="10dip"/>
    <LinearLayout
        android:id="@+id/set_item_7"
         style="@style/set_item_layout">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_call"/>
        <TextView 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/set_lable7"/>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
    <View style="@style/LineVertical" android:layout_marginLeft="10dip"/>
    <LinearLayout
        android:id="@+id/set_item_8"
         style="@style/set_item_layout">
        <ImageView 
            style="@style/set_icon_size"
		    android:layout_weight="0"
		    android:src="@drawable/mine_set"/>
        <TextView 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/set_lable8"/>
        <ImageView 
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0"
		    android:src="@drawable/map_point_right"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>